compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOnlyConstructorCalls/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOnlyConstructorCalls/source.kt:1:13: error: cannot access 'test.Super' which is a supertype of 'test.Sub'. Check your module classpath for missing or conflicting dependencies
import test.Sub
            ^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOnlyConstructorCalls/source.kt:3:16: error: cannot access 'test.Super' which is a supertype of 'test.Sub'. Check your module classpath for missing or conflicting dependencies
fun usage(arg: Sub): Sub {
               ^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOnlyConstructorCalls/source.kt:3:22: error: cannot access 'test.Super' which is a supertype of 'test.Sub'. Check your module classpath for missing or conflicting dependencies
fun usage(arg: Sub): Sub {
                     ^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOnlyConstructorCalls/source.kt:4:12: error: cannot access 'test.Super' which is a supertype of 'test.Sub'. Check your module classpath for missing or conflicting dependencies
    return Sub()
           ^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyOnlyConstructorCalls/source.kt:8:11: error: cannot access 'test.Super' which is a supertype of 'test.Sub'. Check your module classpath for missing or conflicting dependencies
    usage(Sub())
          ^
COMPILATION_ERROR
